// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`mg-item-more Should fire disconnect callback 1`] = `
<mg-menu aria-label="batman" direction="horizontal" role="list">
  <mock:shadow-root>
    <slot></slot>
  </mock:shadow-root>
  <mg-menu-item data-overflow-base-index="0" data-style-direction="horizontal" role="listitem" status="visible">
    <mock:shadow-root>
      <button class="mg-c-menu-item__navigation-button mg-c-menu-item__navigation-button--horizontal mg-c-menu-item__navigation-button--size-regular mg-c-menu-item__navigation-button--visible">
        <slot name="image"></slot>
        <div class="mg-c-menu-item__navigation-button-center">
          <div class="mg-c-menu-item__navigation-button-text-content">
            <slot name="label"></slot>
            <slot name="information"></slot>
          </div>
        </div>
      </button>
      <div class="mg-c-menu-item__collapse-container mg-c-menu-item__collapse-container--first-level" hidden="">
        <slot></slot>
      </div>
    </mock:shadow-root>
    <span slot="label" title="Batman">
      Batman
    </span>
  </mg-menu-item>
  <mg-menu-item data-overflow-base-index="1" data-style-direction="horizontal" role="listitem" status="visible">
    <mock:shadow-root>
      <button class="mg-c-menu-item__navigation-button mg-c-menu-item__navigation-button--horizontal mg-c-menu-item__navigation-button--size-regular mg-c-menu-item__navigation-button--visible">
        <slot name="image"></slot>
        <div class="mg-c-menu-item__navigation-button-center">
          <div class="mg-c-menu-item__navigation-button-text-content">
            <slot name="label"></slot>
            <slot name="information"></slot>
          </div>
        </div>
      </button>
      <div class="mg-c-menu-item__collapse-container mg-c-menu-item__collapse-container--first-level" hidden="">
        <slot></slot>
      </div>
    </mock:shadow-root>
    <span slot="label" title="Joker">
      Joker
    </span>
  </mg-menu-item>
  <mg-menu-item data-overflow-base-index="2" data-style-direction="horizontal" role="listitem" status="visible">
    <mock:shadow-root>
      <button class="mg-c-menu-item__navigation-button mg-c-menu-item__navigation-button--horizontal mg-c-menu-item__navigation-button--size-regular mg-c-menu-item__navigation-button--visible">
        <slot name="image"></slot>
        <div class="mg-c-menu-item__navigation-button-center">
          <div class="mg-c-menu-item__navigation-button-text-content">
            <slot name="label"></slot>
            <slot name="information"></slot>
          </div>
        </div>
      </button>
      <div class="mg-c-menu-item__collapse-container mg-c-menu-item__collapse-container--first-level" hidden="">
        <slot></slot>
      </div>
    </mock:shadow-root>
    <span slot="label" title="Bane">
      Bane
    </span>
  </mg-menu-item>
  <mg-item-more role="listitem">
    <mock:shadow-root>
      <mg-menu-item data-overflow-more data-size="regular" data-style-direction="horizontal" role="presentation" status="visible">
        <mock:shadow-root>
          <button aria-expanded="false" class="mg-c-menu-item__navigation-button mg-c-menu-item__navigation-button--size-regular mg-c-menu-item__navigation-button--visible">
            <slot name="image"></slot>
            <div class="mg-c-menu-item__navigation-button-center">
              <div class="mg-c-menu-item__navigation-button-text-content">
                <slot name="label"></slot>
                <slot name="information"></slot>
              </div>
            </div>
            <span class="mg-c-menu-item__navigation-button-chevron">
              <mg-icon icon="chevron-down" size="small"></mg-icon>
            </span>
          </button>
          <div class="mg-c-menu-item__collapse-container" hidden="">
            <slot></slot>
          </div>
        </mock:shadow-root>
        <mg-icon icon="ellipsis-vertical" slot="image"></mg-icon>
        <span class="mg-u-visually-hidden" slot="label" title="Additional menu">
          Additional menu
        </span>
        <mg-menu aria-label="Additional menu" direction="vertical" role="list">
          <mock:shadow-root>
            <slot></slot>
          </mock:shadow-root>
          <mg-menu-item data-overflow-proxy-index="0" data-style-direction="vertical" role="listitem" status="visible">
            <mock:shadow-root>
              <button class="mg-c-menu-item__navigation-button mg-c-menu-item__navigation-button--size-regular mg-c-menu-item__navigation-button--visible">
                <slot name="image"></slot>
                <div class="mg-c-menu-item__navigation-button-center">
                  <div class="mg-c-menu-item__navigation-button-text-content">
                    <slot name="label"></slot>
                    <slot name="information"></slot>
                  </div>
                </div>
              </button>
              <div class="mg-c-menu-item__collapse-container" hidden="">
                <slot></slot>
              </div>
            </mock:shadow-root>
            <span slot="label" title="Batman">
              Batman
            </span>
          </mg-menu-item>
          <mg-menu-item data-overflow-proxy-index="1" data-style-direction="vertical" role="listitem" status="visible">
            <mock:shadow-root>
              <button class="mg-c-menu-item__navigation-button mg-c-menu-item__navigation-button--size-regular mg-c-menu-item__navigation-button--visible">
                <slot name="image"></slot>
                <div class="mg-c-menu-item__navigation-button-center">
                  <div class="mg-c-menu-item__navigation-button-text-content">
                    <slot name="label"></slot>
                    <slot name="information"></slot>
                  </div>
                </div>
              </button>
              <div class="mg-c-menu-item__collapse-container" hidden="">
                <slot></slot>
              </div>
            </mock:shadow-root>
            <span slot="label" title="Joker">
              Joker
            </span>
          </mg-menu-item>
          <mg-menu-item data-overflow-proxy-index="2" data-style-direction="vertical" role="listitem" status="visible">
            <mock:shadow-root>
              <button class="mg-c-menu-item__navigation-button mg-c-menu-item__navigation-button--size-regular mg-c-menu-item__navigation-button--visible">
                <slot name="image"></slot>
                <div class="mg-c-menu-item__navigation-button-center">
                  <div class="mg-c-menu-item__navigation-button-text-content">
                    <slot name="label"></slot>
                    <slot name="information"></slot>
                  </div>
                </div>
              </button>
              <div class="mg-c-menu-item__collapse-container" hidden="">
                <slot></slot>
              </div>
            </mock:shadow-root>
            <span slot="label" title="Bane">
              Bane
            </span>
          </mg-menu-item>
        </mg-menu>
      </mg-menu-item>
    </mock:shadow-root>
  </mg-item-more>
</mg-menu>
`;

exports[`mg-item-more Should fire disconnect callback 2`] = `
<mg-menu aria-label="batman" direction="horizontal" role="list">
  <mock:shadow-root>
    <slot></slot>
  </mock:shadow-root>
  <mg-menu-item data-overflow-base-index="0" data-style-direction="horizontal" role="listitem" status="visible">
    <mock:shadow-root>
      <button class="mg-c-menu-item__navigation-button mg-c-menu-item__navigation-button--horizontal mg-c-menu-item__navigation-button--size-regular mg-c-menu-item__navigation-button--visible">
        <slot name="image"></slot>
        <div class="mg-c-menu-item__navigation-button-center">
          <div class="mg-c-menu-item__navigation-button-text-content">
            <slot name="label"></slot>
            <slot name="information"></slot>
          </div>
        </div>
      </button>
      <div class="mg-c-menu-item__collapse-container mg-c-menu-item__collapse-container--first-level" hidden="">
        <slot></slot>
      </div>
    </mock:shadow-root>
    <span slot="label" title="Batman">
      Batman
    </span>
  </mg-menu-item>
  <mg-menu-item data-overflow-base-index="1" data-style-direction="horizontal" role="listitem" status="visible">
    <mock:shadow-root>
      <button class="mg-c-menu-item__navigation-button mg-c-menu-item__navigation-button--horizontal mg-c-menu-item__navigation-button--size-regular mg-c-menu-item__navigation-button--visible">
        <slot name="image"></slot>
        <div class="mg-c-menu-item__navigation-button-center">
          <div class="mg-c-menu-item__navigation-button-text-content">
            <slot name="label"></slot>
            <slot name="information"></slot>
          </div>
        </div>
      </button>
      <div class="mg-c-menu-item__collapse-container mg-c-menu-item__collapse-container--first-level" hidden="">
        <slot></slot>
      </div>
    </mock:shadow-root>
    <span slot="label" title="Joker">
      Joker
    </span>
  </mg-menu-item>
  <mg-menu-item data-overflow-base-index="2" data-style-direction="horizontal" role="listitem" status="visible">
    <mock:shadow-root>
      <button class="mg-c-menu-item__navigation-button mg-c-menu-item__navigation-button--horizontal mg-c-menu-item__navigation-button--size-regular mg-c-menu-item__navigation-button--visible">
        <slot name="image"></slot>
        <div class="mg-c-menu-item__navigation-button-center">
          <div class="mg-c-menu-item__navigation-button-text-content">
            <slot name="label"></slot>
            <slot name="information"></slot>
          </div>
        </div>
      </button>
      <div class="mg-c-menu-item__collapse-container mg-c-menu-item__collapse-container--first-level" hidden="">
        <slot></slot>
      </div>
    </mock:shadow-root>
    <span slot="label" title="Bane">
      Bane
    </span>
  </mg-menu-item>
</mg-menu>
`;

exports[`mg-item-more events Should update proxy status when base item status-change event was trigger 1`] = `
<mg-menu aria-label="batman" direction="horizontal" role="list">
  <mock:shadow-root>
    <slot></slot>
  </mock:shadow-root>
  <mg-menu-item data-overflow-base-index="0" data-style-direction="horizontal" role="listitem" status="visible">
    <mock:shadow-root>
      <button class="mg-c-menu-item__navigation-button mg-c-menu-item__navigation-button--horizontal mg-c-menu-item__navigation-button--size-regular mg-c-menu-item__navigation-button--visible">
        <slot name="image"></slot>
        <div class="mg-c-menu-item__navigation-button-center">
          <div class="mg-c-menu-item__navigation-button-text-content">
            <slot name="label"></slot>
            <slot name="information"></slot>
          </div>
        </div>
      </button>
      <div class="mg-c-menu-item__collapse-container mg-c-menu-item__collapse-container--first-level" hidden="">
        <slot></slot>
      </div>
    </mock:shadow-root>
    <span slot="label" title="Batman">
      Batman
    </span>
  </mg-menu-item>
  <mg-menu-item data-overflow-base-index="1" data-style-direction="horizontal" role="listitem" status="visible">
    <mock:shadow-root>
      <button class="mg-c-menu-item__navigation-button mg-c-menu-item__navigation-button--horizontal mg-c-menu-item__navigation-button--size-regular mg-c-menu-item__navigation-button--visible">
        <slot name="image"></slot>
        <div class="mg-c-menu-item__navigation-button-center">
          <div class="mg-c-menu-item__navigation-button-text-content">
            <slot name="label"></slot>
            <slot name="information"></slot>
          </div>
        </div>
      </button>
      <div class="mg-c-menu-item__collapse-container mg-c-menu-item__collapse-container--first-level" hidden="">
        <slot></slot>
      </div>
    </mock:shadow-root>
    <span slot="label" title="Joker">
      Joker
    </span>
  </mg-menu-item>
  <mg-menu-item data-overflow-base-index="2" data-style-direction="horizontal" role="listitem" status="visible">
    <mock:shadow-root>
      <button class="mg-c-menu-item__navigation-button mg-c-menu-item__navigation-button--horizontal mg-c-menu-item__navigation-button--size-regular mg-c-menu-item__navigation-button--visible">
        <slot name="image"></slot>
        <div class="mg-c-menu-item__navigation-button-center">
          <div class="mg-c-menu-item__navigation-button-text-content">
            <slot name="label"></slot>
            <slot name="information"></slot>
          </div>
        </div>
      </button>
      <div class="mg-c-menu-item__collapse-container mg-c-menu-item__collapse-container--first-level" hidden="">
        <slot></slot>
      </div>
    </mock:shadow-root>
    <span slot="label" title="Bane">
      Bane
    </span>
  </mg-menu-item>
  <mg-item-more role="listitem">
    <mock:shadow-root>
      <mg-menu-item data-overflow-more data-size="regular" data-style-direction="horizontal" role="presentation" status="visible">
        <mock:shadow-root>
          <button aria-expanded="false" class="mg-c-menu-item__navigation-button mg-c-menu-item__navigation-button--size-regular mg-c-menu-item__navigation-button--visible">
            <slot name="image"></slot>
            <div class="mg-c-menu-item__navigation-button-center">
              <div class="mg-c-menu-item__navigation-button-text-content">
                <slot name="label"></slot>
                <slot name="information"></slot>
              </div>
            </div>
            <span class="mg-c-menu-item__navigation-button-chevron">
              <mg-icon icon="chevron-down" size="small"></mg-icon>
            </span>
          </button>
          <div class="mg-c-menu-item__collapse-container" hidden="">
            <slot></slot>
          </div>
        </mock:shadow-root>
        <mg-icon icon="ellipsis-vertical" slot="image"></mg-icon>
        <span class="mg-u-visually-hidden" slot="label" title="Additional menu">
          Additional menu
        </span>
        <mg-menu aria-label="Additional menu" direction="vertical" role="list">
          <mock:shadow-root>
            <slot></slot>
          </mock:shadow-root>
          <mg-menu-item data-overflow-proxy-index="0" data-style-direction="vertical" role="listitem" status="visible">
            <mock:shadow-root>
              <button class="mg-c-menu-item__navigation-button mg-c-menu-item__navigation-button--size-regular mg-c-menu-item__navigation-button--visible">
                <slot name="image"></slot>
                <div class="mg-c-menu-item__navigation-button-center">
                  <div class="mg-c-menu-item__navigation-button-text-content">
                    <slot name="label"></slot>
                    <slot name="information"></slot>
                  </div>
                </div>
              </button>
              <div class="mg-c-menu-item__collapse-container" hidden="">
                <slot></slot>
              </div>
            </mock:shadow-root>
            <span slot="label" title="Batman">
              Batman
            </span>
          </mg-menu-item>
          <mg-menu-item data-overflow-proxy-index="1" data-style-direction="vertical" role="listitem" status="visible">
            <mock:shadow-root>
              <button class="mg-c-menu-item__navigation-button mg-c-menu-item__navigation-button--size-regular mg-c-menu-item__navigation-button--visible">
                <slot name="image"></slot>
                <div class="mg-c-menu-item__navigation-button-center">
                  <div class="mg-c-menu-item__navigation-button-text-content">
                    <slot name="label"></slot>
                    <slot name="information"></slot>
                  </div>
                </div>
              </button>
              <div class="mg-c-menu-item__collapse-container" hidden="">
                <slot></slot>
              </div>
            </mock:shadow-root>
            <span slot="label" title="Joker">
              Joker
            </span>
          </mg-menu-item>
          <mg-menu-item data-overflow-proxy-index="2" data-style-direction="vertical" role="listitem" status="visible">
            <mock:shadow-root>
              <button class="mg-c-menu-item__navigation-button mg-c-menu-item__navigation-button--size-regular mg-c-menu-item__navigation-button--visible">
                <slot name="image"></slot>
                <div class="mg-c-menu-item__navigation-button-center">
                  <div class="mg-c-menu-item__navigation-button-text-content">
                    <slot name="label"></slot>
                    <slot name="information"></slot>
                  </div>
                </div>
              </button>
              <div class="mg-c-menu-item__collapse-container" hidden="">
                <slot></slot>
              </div>
            </mock:shadow-root>
            <span slot="label" title="Bane">
              Bane
            </span>
          </mg-menu-item>
        </mg-menu>
      </mg-menu-item>
    </mock:shadow-root>
  </mg-item-more>
</mg-menu>
`;

exports[`mg-item-more events Should update proxy status when base item status-change event was trigger 2`] = `
<mg-menu aria-label="batman" direction="horizontal" role="list">
  <mock:shadow-root>
    <slot></slot>
  </mock:shadow-root>
  <mg-menu-item data-overflow-base-index="0" data-style-direction="horizontal" role="listitem" status="visible">
    <mock:shadow-root>
      <button class="mg-c-menu-item__navigation-button mg-c-menu-item__navigation-button--horizontal mg-c-menu-item__navigation-button--size-regular mg-c-menu-item__navigation-button--visible">
        <slot name="image"></slot>
        <div class="mg-c-menu-item__navigation-button-center">
          <div class="mg-c-menu-item__navigation-button-text-content">
            <slot name="label"></slot>
            <slot name="information"></slot>
          </div>
        </div>
      </button>
      <div class="mg-c-menu-item__collapse-container mg-c-menu-item__collapse-container--first-level" hidden="">
        <slot></slot>
      </div>
    </mock:shadow-root>
    <span slot="label" title="Batman">
      Batman
    </span>
  </mg-menu-item>
  <mg-menu-item data-overflow-base-index="1" data-style-direction="horizontal" role="listitem" status="visible">
    <mock:shadow-root>
      <button class="mg-c-menu-item__navigation-button mg-c-menu-item__navigation-button--horizontal mg-c-menu-item__navigation-button--size-regular mg-c-menu-item__navigation-button--visible">
        <slot name="image"></slot>
        <div class="mg-c-menu-item__navigation-button-center">
          <div class="mg-c-menu-item__navigation-button-text-content">
            <slot name="label"></slot>
            <slot name="information"></slot>
          </div>
        </div>
      </button>
      <div class="mg-c-menu-item__collapse-container mg-c-menu-item__collapse-container--first-level" hidden="">
        <slot></slot>
      </div>
    </mock:shadow-root>
    <span slot="label" title="Joker">
      Joker
    </span>
  </mg-menu-item>
  <mg-menu-item data-overflow-base-index="2" data-style-direction="horizontal" role="listitem" status="visible">
    <mock:shadow-root>
      <button class="mg-c-menu-item__navigation-button mg-c-menu-item__navigation-button--horizontal mg-c-menu-item__navigation-button--size-regular mg-c-menu-item__navigation-button--visible">
        <slot name="image"></slot>
        <div class="mg-c-menu-item__navigation-button-center">
          <div class="mg-c-menu-item__navigation-button-text-content">
            <slot name="label"></slot>
            <slot name="information"></slot>
          </div>
        </div>
      </button>
      <div class="mg-c-menu-item__collapse-container mg-c-menu-item__collapse-container--first-level" hidden="">
        <slot></slot>
      </div>
    </mock:shadow-root>
    <span slot="label" title="Bane">
      Bane
    </span>
  </mg-menu-item>
  <mg-item-more role="listitem">
    <mock:shadow-root>
      <mg-menu-item data-overflow-more data-size="regular" data-style-direction="horizontal" role="presentation" status="active">
        <mock:shadow-root>
          <mg-popover>
            <mock:shadow-root>
              <slot></slot>
              <slot name="content"></slot>
            </mock:shadow-root>
            <button aria-controls="mg-popover-test_more-item" aria-current="page" aria-expanded="false" class="mg-c-menu-item__navigation-button mg-c-menu-item__navigation-button--active mg-c-menu-item__navigation-button--horizontal mg-c-menu-item__navigation-button--size-regular">
              <slot name="image"></slot>
              <div class="mg-c-menu-item__navigation-button-center">
                <div class="mg-c-menu-item__navigation-button-text-content">
                  <slot name="label"></slot>
                  <slot name="information"></slot>
                </div>
              </div>
              <span class="mg-c-menu-item__navigation-button-chevron">
                <mg-icon icon="chevron-down" size="small"></mg-icon>
              </span>
            </button>
            <mg-popover-content data-arrow-hide data-popper-placement="bottom-start" data-popper-reference-hidden id="mg-popover-test_more-item" slot="content" style="position: fixed; left: 0; top: 0; margin: 0; right: auto; bottom: auto; transform: translate(0px, 0px);">
              <mock:shadow-root>
                <mg-card class="mg-c-popover-content">
                  <div class="mg-c-popover-content__title">
                    <slot name="title"></slot>
                  </div>
                  <slot name="content"></slot>
                </mg-card>
                <slot name="arrow"></slot>
              </mock:shadow-root>
              <div data-popper-arrow slot="arrow" style="position: absolute;"></div>
              <div class="mg-c-menu-item__collapse-container mg-c-menu-item__collapse-container--first-level" slot="content">
                <slot></slot>
              </div>
            </mg-popover-content>
          </mg-popover>
        </mock:shadow-root>
        <mg-icon icon="ellipsis-vertical" slot="image"></mg-icon>
        <span class="mg-u-visually-hidden" slot="label" title="Additional menu">
          Additional menu
        </span>
        <mg-menu aria-label="Additional menu" direction="vertical" role="list">
          <mock:shadow-root>
            <slot></slot>
          </mock:shadow-root>
          <mg-menu-item data-overflow-proxy-index="0" data-style-direction="vertical" role="listitem" status="active">
            <mock:shadow-root>
              <button aria-current="page" class="mg-c-menu-item__navigation-button mg-c-menu-item__navigation-button--active mg-c-menu-item__navigation-button--size-regular mg-c-menu-item__navigation-button--vertical">
                <slot name="image"></slot>
                <div class="mg-c-menu-item__navigation-button-center">
                  <div class="mg-c-menu-item__navigation-button-text-content">
                    <slot name="label"></slot>
                    <slot name="information"></slot>
                  </div>
                </div>
              </button>
              <div class="mg-c-menu-item__collapse-container" hidden="">
                <slot></slot>
              </div>
            </mock:shadow-root>
            <span slot="label" title="Batman">
              Batman
            </span>
          </mg-menu-item>
          <mg-menu-item data-overflow-proxy-index="1" data-style-direction="vertical" role="listitem" status="visible">
            <mock:shadow-root>
              <button class="mg-c-menu-item__navigation-button mg-c-menu-item__navigation-button--size-regular mg-c-menu-item__navigation-button--vertical mg-c-menu-item__navigation-button--visible">
                <slot name="image"></slot>
                <div class="mg-c-menu-item__navigation-button-center">
                  <div class="mg-c-menu-item__navigation-button-text-content">
                    <slot name="label"></slot>
                    <slot name="information"></slot>
                  </div>
                </div>
              </button>
              <div class="mg-c-menu-item__collapse-container" hidden="">
                <slot></slot>
              </div>
            </mock:shadow-root>
            <span slot="label" title="Joker">
              Joker
            </span>
          </mg-menu-item>
          <mg-menu-item data-overflow-proxy-index="2" data-style-direction="vertical" role="listitem" status="visible">
            <mock:shadow-root>
              <button class="mg-c-menu-item__navigation-button mg-c-menu-item__navigation-button--size-regular mg-c-menu-item__navigation-button--vertical mg-c-menu-item__navigation-button--visible">
                <slot name="image"></slot>
                <div class="mg-c-menu-item__navigation-button-center">
                  <div class="mg-c-menu-item__navigation-button-text-content">
                    <slot name="label"></slot>
                    <slot name="information"></slot>
                  </div>
                </div>
              </button>
              <div class="mg-c-menu-item__collapse-container" hidden="">
                <slot></slot>
              </div>
            </mock:shadow-root>
            <span slot="label" title="Bane">
              Bane
            </span>
          </mg-menu-item>
        </mg-menu>
      </mg-menu-item>
    </mock:shadow-root>
  </mg-item-more>
</mg-menu>
`;

exports[`mg-item-more events should trigger base item click event when proxy item was clicked 1`] = `
<mg-menu aria-label="batman" direction="horizontal" role="list">
  <mock:shadow-root>
    <slot></slot>
  </mock:shadow-root>
  <mg-menu-item data-overflow-base-index="0" data-style-direction="horizontal" role="listitem" status="visible">
    <mock:shadow-root>
      <button class="mg-c-menu-item__navigation-button mg-c-menu-item__navigation-button--horizontal mg-c-menu-item__navigation-button--size-regular mg-c-menu-item__navigation-button--visible">
        <slot name="image"></slot>
        <div class="mg-c-menu-item__navigation-button-center">
          <div class="mg-c-menu-item__navigation-button-text-content">
            <slot name="label"></slot>
            <slot name="information"></slot>
          </div>
        </div>
      </button>
      <div class="mg-c-menu-item__collapse-container mg-c-menu-item__collapse-container--first-level" hidden="">
        <slot></slot>
      </div>
    </mock:shadow-root>
    <span slot="label" title="Batman">
      Batman
    </span>
  </mg-menu-item>
  <mg-menu-item data-overflow-base-index="1" data-style-direction="horizontal" role="listitem" status="visible">
    <mock:shadow-root>
      <button class="mg-c-menu-item__navigation-button mg-c-menu-item__navigation-button--horizontal mg-c-menu-item__navigation-button--size-regular mg-c-menu-item__navigation-button--visible">
        <slot name="image"></slot>
        <div class="mg-c-menu-item__navigation-button-center">
          <div class="mg-c-menu-item__navigation-button-text-content">
            <slot name="label"></slot>
            <slot name="information"></slot>
          </div>
        </div>
      </button>
      <div class="mg-c-menu-item__collapse-container mg-c-menu-item__collapse-container--first-level" hidden="">
        <slot></slot>
      </div>
    </mock:shadow-root>
    <span slot="label" title="Joker">
      Joker
    </span>
  </mg-menu-item>
  <mg-menu-item data-overflow-base-index="2" data-style-direction="horizontal" role="listitem" status="visible">
    <mock:shadow-root>
      <button class="mg-c-menu-item__navigation-button mg-c-menu-item__navigation-button--horizontal mg-c-menu-item__navigation-button--size-regular mg-c-menu-item__navigation-button--visible">
        <slot name="image"></slot>
        <div class="mg-c-menu-item__navigation-button-center">
          <div class="mg-c-menu-item__navigation-button-text-content">
            <slot name="label"></slot>
            <slot name="information"></slot>
          </div>
        </div>
      </button>
      <div class="mg-c-menu-item__collapse-container mg-c-menu-item__collapse-container--first-level" hidden="">
        <slot></slot>
      </div>
    </mock:shadow-root>
    <span slot="label" title="Bane">
      Bane
    </span>
  </mg-menu-item>
  <mg-item-more role="listitem">
    <mock:shadow-root>
      <mg-menu-item data-overflow-more data-size="regular" data-style-direction="horizontal" role="presentation" status="visible">
        <mock:shadow-root>
          <mg-popover>
            <mock:shadow-root>
              <slot></slot>
              <slot name="content"></slot>
            </mock:shadow-root>
            <button aria-controls="mg-popover-test_more-item" aria-expanded="false" class="mg-c-menu-item__navigation-button mg-c-menu-item__navigation-button--horizontal mg-c-menu-item__navigation-button--size-regular mg-c-menu-item__navigation-button--visible">
              <slot name="image"></slot>
              <div class="mg-c-menu-item__navigation-button-center">
                <div class="mg-c-menu-item__navigation-button-text-content">
                  <slot name="label"></slot>
                  <slot name="information"></slot>
                </div>
              </div>
              <span class="mg-c-menu-item__navigation-button-chevron">
                <mg-icon icon="chevron-down" size="small"></mg-icon>
              </span>
            </button>
            <mg-popover-content data-arrow-hide data-popper-placement="bottom-start" data-popper-reference-hidden id="mg-popover-test_more-item" slot="content" style="position: fixed; left: 0; top: 0; margin: 0; right: auto; bottom: auto; transform: translate(0px, 0px);">
              <mock:shadow-root>
                <mg-card class="mg-c-popover-content">
                  <div class="mg-c-popover-content__title">
                    <slot name="title"></slot>
                  </div>
                  <slot name="content"></slot>
                </mg-card>
                <slot name="arrow"></slot>
              </mock:shadow-root>
              <div data-popper-arrow slot="arrow" style="position: absolute;"></div>
              <div class="mg-c-menu-item__collapse-container mg-c-menu-item__collapse-container--first-level" slot="content">
                <slot></slot>
              </div>
            </mg-popover-content>
          </mg-popover>
        </mock:shadow-root>
        <mg-icon icon="ellipsis-vertical" slot="image"></mg-icon>
        <span class="mg-u-visually-hidden" slot="label" title="Additional menu">
          Additional menu
        </span>
        <mg-menu aria-label="Additional menu" direction="vertical" role="list">
          <mock:shadow-root>
            <slot></slot>
          </mock:shadow-root>
          <mg-menu-item data-overflow-proxy-index="0" data-style-direction="vertical" role="listitem" status="visible">
            <mock:shadow-root>
              <button class="mg-c-menu-item__navigation-button mg-c-menu-item__navigation-button--size-regular mg-c-menu-item__navigation-button--vertical mg-c-menu-item__navigation-button--visible">
                <slot name="image"></slot>
                <div class="mg-c-menu-item__navigation-button-center">
                  <div class="mg-c-menu-item__navigation-button-text-content">
                    <slot name="label"></slot>
                    <slot name="information"></slot>
                  </div>
                </div>
              </button>
              <div class="mg-c-menu-item__collapse-container" hidden="">
                <slot></slot>
              </div>
            </mock:shadow-root>
            <span slot="label" title="Batman">
              Batman
            </span>
          </mg-menu-item>
          <mg-menu-item data-overflow-proxy-index="1" data-style-direction="vertical" role="listitem" status="visible">
            <mock:shadow-root>
              <button class="mg-c-menu-item__navigation-button mg-c-menu-item__navigation-button--size-regular mg-c-menu-item__navigation-button--vertical mg-c-menu-item__navigation-button--visible">
                <slot name="image"></slot>
                <div class="mg-c-menu-item__navigation-button-center">
                  <div class="mg-c-menu-item__navigation-button-text-content">
                    <slot name="label"></slot>
                    <slot name="information"></slot>
                  </div>
                </div>
              </button>
              <div class="mg-c-menu-item__collapse-container" hidden="">
                <slot></slot>
              </div>
            </mock:shadow-root>
            <span slot="label" title="Joker">
              Joker
            </span>
          </mg-menu-item>
          <mg-menu-item data-overflow-proxy-index="2" data-style-direction="vertical" role="listitem" status="visible">
            <mock:shadow-root>
              <button class="mg-c-menu-item__navigation-button mg-c-menu-item__navigation-button--size-regular mg-c-menu-item__navigation-button--vertical mg-c-menu-item__navigation-button--visible">
                <slot name="image"></slot>
                <div class="mg-c-menu-item__navigation-button-center">
                  <div class="mg-c-menu-item__navigation-button-text-content">
                    <slot name="label"></slot>
                    <slot name="information"></slot>
                  </div>
                </div>
              </button>
              <div class="mg-c-menu-item__collapse-container" hidden="">
                <slot></slot>
              </div>
            </mock:shadow-root>
            <span slot="label" title="Bane">
              Bane
            </span>
          </mg-menu-item>
        </mg-menu>
      </mg-menu-item>
    </mock:shadow-root>
  </mg-item-more>
</mg-menu>
`;

exports[`mg-item-more events should trigger base item click event when proxy item was clicked 2`] = `
<mg-menu aria-label="batman" direction="horizontal" ishref="" role="list">
  <mock:shadow-root>
    <slot></slot>
  </mock:shadow-root>
  <mg-menu-item data-overflow-base-index="0" data-style-direction="horizontal" role="listitem" status="visible">
    <mock:shadow-root>
      <a class="mg-c-menu-item__navigation-button mg-c-menu-item__navigation-button--horizontal mg-c-menu-item__navigation-button--size-regular mg-c-menu-item__navigation-button--visible" href="#">
        <slot name="image"></slot>
        <div class="mg-c-menu-item__navigation-button-center">
          <div class="mg-c-menu-item__navigation-button-text-content">
            <slot name="label"></slot>
            <slot name="information"></slot>
          </div>
        </div>
      </a>
      <div class="mg-c-menu-item__collapse-container mg-c-menu-item__collapse-container--first-level" hidden="">
        <slot></slot>
      </div>
    </mock:shadow-root>
    <span slot="label" title="Batman">
      Batman
    </span>
  </mg-menu-item>
  <mg-menu-item data-overflow-base-index="1" data-style-direction="horizontal" role="listitem" status="visible">
    <mock:shadow-root>
      <button class="mg-c-menu-item__navigation-button mg-c-menu-item__navigation-button--horizontal mg-c-menu-item__navigation-button--size-regular mg-c-menu-item__navigation-button--visible">
        <slot name="image"></slot>
        <div class="mg-c-menu-item__navigation-button-center">
          <div class="mg-c-menu-item__navigation-button-text-content">
            <slot name="label"></slot>
            <slot name="information"></slot>
          </div>
        </div>
      </button>
      <div class="mg-c-menu-item__collapse-container mg-c-menu-item__collapse-container--first-level" hidden="">
        <slot></slot>
      </div>
    </mock:shadow-root>
    <span slot="label" title="Joker">
      Joker
    </span>
  </mg-menu-item>
  <mg-menu-item data-overflow-base-index="2" data-style-direction="horizontal" role="listitem" status="visible">
    <mock:shadow-root>
      <button class="mg-c-menu-item__navigation-button mg-c-menu-item__navigation-button--horizontal mg-c-menu-item__navigation-button--size-regular mg-c-menu-item__navigation-button--visible">
        <slot name="image"></slot>
        <div class="mg-c-menu-item__navigation-button-center">
          <div class="mg-c-menu-item__navigation-button-text-content">
            <slot name="label"></slot>
            <slot name="information"></slot>
          </div>
        </div>
      </button>
      <div class="mg-c-menu-item__collapse-container mg-c-menu-item__collapse-container--first-level" hidden="">
        <slot></slot>
      </div>
    </mock:shadow-root>
    <span slot="label" title="Bane">
      Bane
    </span>
  </mg-menu-item>
  <mg-item-more role="listitem">
    <mock:shadow-root>
      <mg-menu-item data-overflow-more data-size="regular" data-style-direction="horizontal" role="presentation" status="visible">
        <mock:shadow-root>
          <mg-popover>
            <mock:shadow-root>
              <slot></slot>
              <slot name="content"></slot>
            </mock:shadow-root>
            <button aria-controls="mg-popover-test_more-item" aria-expanded="false" class="mg-c-menu-item__navigation-button mg-c-menu-item__navigation-button--horizontal mg-c-menu-item__navigation-button--size-regular mg-c-menu-item__navigation-button--visible">
              <slot name="image"></slot>
              <div class="mg-c-menu-item__navigation-button-center">
                <div class="mg-c-menu-item__navigation-button-text-content">
                  <slot name="label"></slot>
                  <slot name="information"></slot>
                </div>
              </div>
              <span class="mg-c-menu-item__navigation-button-chevron">
                <mg-icon icon="chevron-down" size="small"></mg-icon>
              </span>
            </button>
            <mg-popover-content data-arrow-hide data-popper-placement="bottom-start" data-popper-reference-hidden id="mg-popover-test_more-item" slot="content" style="position: fixed; left: 0; top: 0; margin: 0; right: auto; bottom: auto; transform: translate(0px, 0px);">
              <mock:shadow-root>
                <mg-card class="mg-c-popover-content">
                  <div class="mg-c-popover-content__title">
                    <slot name="title"></slot>
                  </div>
                  <slot name="content"></slot>
                </mg-card>
                <slot name="arrow"></slot>
              </mock:shadow-root>
              <div data-popper-arrow slot="arrow" style="position: absolute;"></div>
              <div class="mg-c-menu-item__collapse-container mg-c-menu-item__collapse-container--first-level" slot="content">
                <slot></slot>
              </div>
            </mg-popover-content>
          </mg-popover>
        </mock:shadow-root>
        <mg-icon icon="ellipsis-vertical" slot="image"></mg-icon>
        <span class="mg-u-visually-hidden" slot="label" title="Additional menu">
          Additional menu
        </span>
        <mg-menu aria-label="Additional menu" direction="vertical" role="list">
          <mock:shadow-root>
            <slot></slot>
          </mock:shadow-root>
          <mg-menu-item data-overflow-proxy-index="0" data-style-direction="vertical" role="listitem" status="visible">
            <mock:shadow-root>
              <button class="mg-c-menu-item__navigation-button mg-c-menu-item__navigation-button--size-regular mg-c-menu-item__navigation-button--vertical mg-c-menu-item__navigation-button--visible">
                <slot name="image"></slot>
                <div class="mg-c-menu-item__navigation-button-center">
                  <div class="mg-c-menu-item__navigation-button-text-content">
                    <slot name="label"></slot>
                    <slot name="information"></slot>
                  </div>
                </div>
              </button>
              <div class="mg-c-menu-item__collapse-container" hidden="">
                <slot></slot>
              </div>
            </mock:shadow-root>
            <span slot="label" title="Batman">
              Batman
            </span>
          </mg-menu-item>
          <mg-menu-item data-overflow-proxy-index="1" data-style-direction="vertical" role="listitem" status="visible">
            <mock:shadow-root>
              <button class="mg-c-menu-item__navigation-button mg-c-menu-item__navigation-button--size-regular mg-c-menu-item__navigation-button--vertical mg-c-menu-item__navigation-button--visible">
                <slot name="image"></slot>
                <div class="mg-c-menu-item__navigation-button-center">
                  <div class="mg-c-menu-item__navigation-button-text-content">
                    <slot name="label"></slot>
                    <slot name="information"></slot>
                  </div>
                </div>
              </button>
              <div class="mg-c-menu-item__collapse-container" hidden="">
                <slot></slot>
              </div>
            </mock:shadow-root>
            <span slot="label" title="Joker">
              Joker
            </span>
          </mg-menu-item>
          <mg-menu-item data-overflow-proxy-index="2" data-style-direction="vertical" role="listitem" status="visible">
            <mock:shadow-root>
              <button class="mg-c-menu-item__navigation-button mg-c-menu-item__navigation-button--size-regular mg-c-menu-item__navigation-button--vertical mg-c-menu-item__navigation-button--visible">
                <slot name="image"></slot>
                <div class="mg-c-menu-item__navigation-button-center">
                  <div class="mg-c-menu-item__navigation-button-text-content">
                    <slot name="label"></slot>
                    <slot name="information"></slot>
                  </div>
                </div>
              </button>
              <div class="mg-c-menu-item__collapse-container" hidden="">
                <slot></slot>
              </div>
            </mock:shadow-root>
            <span slot="label" title="Bane">
              Bane
            </span>
          </mg-menu-item>
        </mg-menu>
      </mg-menu-item>
    </mock:shadow-root>
  </mg-item-more>
</mg-menu>
`;

exports[`mg-item-more render should manage resize with observer, case { hasId: true } 1`] = `
<mg-menu aria-label="batman" direction="horizontal" hasid="" role="list">
  <mock:shadow-root>
    <slot></slot>
  </mock:shadow-root>
  <mg-menu-item data-overflow-base-index="0" data-style-direction="horizontal" id="my-id-1" role="listitem" status="visible">
    <mock:shadow-root>
      <button class="mg-c-menu-item__navigation-button mg-c-menu-item__navigation-button--horizontal mg-c-menu-item__navigation-button--size-regular mg-c-menu-item__navigation-button--visible">
        <slot name="image"></slot>
        <div class="mg-c-menu-item__navigation-button-center">
          <div class="mg-c-menu-item__navigation-button-text-content">
            <slot name="label"></slot>
            <slot name="information"></slot>
          </div>
        </div>
      </button>
      <div class="mg-c-menu-item__collapse-container mg-c-menu-item__collapse-container--first-level" hidden="">
        <slot></slot>
      </div>
    </mock:shadow-root>
    <span slot="label" title="Batman">
      Batman
    </span>
  </mg-menu-item>
  <mg-menu-item data-overflow-base-index="1" data-style-direction="horizontal" id="my-id-2" role="listitem" status="visible">
    <mock:shadow-root>
      <button class="mg-c-menu-item__navigation-button mg-c-menu-item__navigation-button--horizontal mg-c-menu-item__navigation-button--size-regular mg-c-menu-item__navigation-button--visible">
        <slot name="image"></slot>
        <div class="mg-c-menu-item__navigation-button-center">
          <div class="mg-c-menu-item__navigation-button-text-content">
            <slot name="label"></slot>
            <slot name="information"></slot>
          </div>
        </div>
      </button>
      <div class="mg-c-menu-item__collapse-container mg-c-menu-item__collapse-container--first-level" hidden="">
        <slot></slot>
      </div>
    </mock:shadow-root>
    <span slot="label" title="Joker">
      Joker
    </span>
  </mg-menu-item>
  <mg-menu-item data-overflow-base-index="2" data-style-direction="horizontal" id="my-id-3" role="listitem" status="visible">
    <mock:shadow-root>
      <button class="mg-c-menu-item__navigation-button mg-c-menu-item__navigation-button--horizontal mg-c-menu-item__navigation-button--size-regular mg-c-menu-item__navigation-button--visible">
        <slot name="image"></slot>
        <div class="mg-c-menu-item__navigation-button-center">
          <div class="mg-c-menu-item__navigation-button-text-content">
            <slot name="label"></slot>
            <slot name="information"></slot>
          </div>
        </div>
      </button>
      <div class="mg-c-menu-item__collapse-container mg-c-menu-item__collapse-container--first-level" hidden="">
        <slot></slot>
      </div>
    </mock:shadow-root>
    <span slot="label" title="Bane">
      Bane
    </span>
  </mg-menu-item>
  <mg-item-more role="listitem">
    <mock:shadow-root>
      <mg-menu-item data-overflow-more data-size="regular" data-style-direction="horizontal" role="presentation" status="visible">
        <mock:shadow-root>
          <button aria-expanded="false" class="mg-c-menu-item__navigation-button mg-c-menu-item__navigation-button--size-regular mg-c-menu-item__navigation-button--visible">
            <slot name="image"></slot>
            <div class="mg-c-menu-item__navigation-button-center">
              <div class="mg-c-menu-item__navigation-button-text-content">
                <slot name="label"></slot>
                <slot name="information"></slot>
              </div>
            </div>
            <span class="mg-c-menu-item__navigation-button-chevron">
              <mg-icon icon="chevron-down" size="small"></mg-icon>
            </span>
          </button>
          <div class="mg-c-menu-item__collapse-container" hidden="">
            <slot></slot>
          </div>
        </mock:shadow-root>
        <mg-icon icon="ellipsis-vertical" slot="image"></mg-icon>
        <span class="mg-u-visually-hidden" slot="label" title="Additional menu">
          Additional menu
        </span>
        <mg-menu aria-label="Additional menu" direction="vertical" role="list">
          <mock:shadow-root>
            <slot></slot>
          </mock:shadow-root>
          <mg-menu-item data-overflow-proxy-index="0" data-style-direction="vertical" id="my-id-1-proxy" role="listitem" status="visible">
            <mock:shadow-root>
              <button class="mg-c-menu-item__navigation-button mg-c-menu-item__navigation-button--size-regular mg-c-menu-item__navigation-button--visible">
                <slot name="image"></slot>
                <div class="mg-c-menu-item__navigation-button-center">
                  <div class="mg-c-menu-item__navigation-button-text-content">
                    <slot name="label"></slot>
                    <slot name="information"></slot>
                  </div>
                </div>
              </button>
              <div class="mg-c-menu-item__collapse-container" hidden="">
                <slot></slot>
              </div>
            </mock:shadow-root>
            <span slot="label" title="Batman">
              Batman
            </span>
          </mg-menu-item>
          <mg-menu-item data-overflow-proxy-index="1" data-style-direction="vertical" id="my-id-2-proxy" role="listitem" status="visible">
            <mock:shadow-root>
              <button class="mg-c-menu-item__navigation-button mg-c-menu-item__navigation-button--size-regular mg-c-menu-item__navigation-button--visible">
                <slot name="image"></slot>
                <div class="mg-c-menu-item__navigation-button-center">
                  <div class="mg-c-menu-item__navigation-button-text-content">
                    <slot name="label"></slot>
                    <slot name="information"></slot>
                  </div>
                </div>
              </button>
              <div class="mg-c-menu-item__collapse-container" hidden="">
                <slot></slot>
              </div>
            </mock:shadow-root>
            <span slot="label" title="Joker">
              Joker
            </span>
          </mg-menu-item>
          <mg-menu-item data-overflow-proxy-index="2" data-style-direction="vertical" id="my-id-3-proxy" role="listitem" status="visible">
            <mock:shadow-root>
              <button class="mg-c-menu-item__navigation-button mg-c-menu-item__navigation-button--size-regular mg-c-menu-item__navigation-button--visible">
                <slot name="image"></slot>
                <div class="mg-c-menu-item__navigation-button-center">
                  <div class="mg-c-menu-item__navigation-button-text-content">
                    <slot name="label"></slot>
                    <slot name="information"></slot>
                  </div>
                </div>
              </button>
              <div class="mg-c-menu-item__collapse-container" hidden="">
                <slot></slot>
              </div>
            </mock:shadow-root>
            <span slot="label" title="Bane">
              Bane
            </span>
          </mg-menu-item>
        </mg-menu>
      </mg-menu-item>
    </mock:shadow-root>
  </mg-item-more>
</mg-menu>
`;

exports[`mg-item-more render should manage resize with observer, case { icon: [Object] } 1`] = `
<mg-menu aria-label="batman" direction="horizontal" role="list">
  <mock:shadow-root>
    <slot></slot>
  </mock:shadow-root>
  <mg-menu-item data-overflow-base-index="0" data-style-direction="horizontal" role="listitem" status="visible">
    <mock:shadow-root>
      <button class="mg-c-menu-item__navigation-button mg-c-menu-item__navigation-button--horizontal mg-c-menu-item__navigation-button--size-regular mg-c-menu-item__navigation-button--visible">
        <slot name="image"></slot>
        <div class="mg-c-menu-item__navigation-button-center">
          <div class="mg-c-menu-item__navigation-button-text-content">
            <slot name="label"></slot>
            <slot name="information"></slot>
          </div>
        </div>
      </button>
      <div class="mg-c-menu-item__collapse-container mg-c-menu-item__collapse-container--first-level" hidden="">
        <slot></slot>
      </div>
    </mock:shadow-root>
    <span slot="label" title="Batman">
      Batman
    </span>
  </mg-menu-item>
  <mg-menu-item data-overflow-base-index="1" data-style-direction="horizontal" role="listitem" status="visible">
    <mock:shadow-root>
      <button class="mg-c-menu-item__navigation-button mg-c-menu-item__navigation-button--horizontal mg-c-menu-item__navigation-button--size-regular mg-c-menu-item__navigation-button--visible">
        <slot name="image"></slot>
        <div class="mg-c-menu-item__navigation-button-center">
          <div class="mg-c-menu-item__navigation-button-text-content">
            <slot name="label"></slot>
            <slot name="information"></slot>
          </div>
        </div>
      </button>
      <div class="mg-c-menu-item__collapse-container mg-c-menu-item__collapse-container--first-level" hidden="">
        <slot></slot>
      </div>
    </mock:shadow-root>
    <span slot="label" title="Joker">
      Joker
    </span>
  </mg-menu-item>
  <mg-menu-item data-overflow-base-index="2" data-style-direction="horizontal" role="listitem" status="visible">
    <mock:shadow-root>
      <button class="mg-c-menu-item__navigation-button mg-c-menu-item__navigation-button--horizontal mg-c-menu-item__navigation-button--size-regular mg-c-menu-item__navigation-button--visible">
        <slot name="image"></slot>
        <div class="mg-c-menu-item__navigation-button-center">
          <div class="mg-c-menu-item__navigation-button-text-content">
            <slot name="label"></slot>
            <slot name="information"></slot>
          </div>
        </div>
      </button>
      <div class="mg-c-menu-item__collapse-container mg-c-menu-item__collapse-container--first-level" hidden="">
        <slot></slot>
      </div>
    </mock:shadow-root>
    <span slot="label" title="Bane">
      Bane
    </span>
  </mg-menu-item>
  <mg-item-more role="listitem">
    <mock:shadow-root>
      <mg-menu-item data-overflow-more data-size="regular" data-style-direction="horizontal" role="presentation" status="visible">
        <mock:shadow-root>
          <button aria-expanded="false" class="mg-c-menu-item__navigation-button mg-c-menu-item__navigation-button--size-regular mg-c-menu-item__navigation-button--visible">
            <slot name="image"></slot>
            <div class="mg-c-menu-item__navigation-button-center">
              <div class="mg-c-menu-item__navigation-button-text-content">
                <slot name="label"></slot>
                <slot name="information"></slot>
              </div>
            </div>
            <span class="mg-c-menu-item__navigation-button-chevron">
              <mg-icon icon="chevron-down" size="small"></mg-icon>
            </span>
          </button>
          <div class="mg-c-menu-item__collapse-container" hidden="">
            <slot></slot>
          </div>
        </mock:shadow-root>
        <mg-icon icon="ellipsis-vertical" slot="image"></mg-icon>
        <span class="mg-u-visually-hidden" slot="label" title="Additional menu">
          Additional menu
        </span>
        <mg-menu aria-label="Additional menu" direction="vertical" role="list">
          <mock:shadow-root>
            <slot></slot>
          </mock:shadow-root>
          <mg-menu-item data-overflow-proxy-index="0" data-style-direction="vertical" role="listitem" status="visible">
            <mock:shadow-root>
              <button class="mg-c-menu-item__navigation-button mg-c-menu-item__navigation-button--size-regular mg-c-menu-item__navigation-button--visible">
                <slot name="image"></slot>
                <div class="mg-c-menu-item__navigation-button-center">
                  <div class="mg-c-menu-item__navigation-button-text-content">
                    <slot name="label"></slot>
                    <slot name="information"></slot>
                  </div>
                </div>
              </button>
              <div class="mg-c-menu-item__collapse-container" hidden="">
                <slot></slot>
              </div>
            </mock:shadow-root>
            <span slot="label" title="Batman">
              Batman
            </span>
          </mg-menu-item>
          <mg-menu-item data-overflow-proxy-index="1" data-style-direction="vertical" role="listitem" status="visible">
            <mock:shadow-root>
              <button class="mg-c-menu-item__navigation-button mg-c-menu-item__navigation-button--size-regular mg-c-menu-item__navigation-button--visible">
                <slot name="image"></slot>
                <div class="mg-c-menu-item__navigation-button-center">
                  <div class="mg-c-menu-item__navigation-button-text-content">
                    <slot name="label"></slot>
                    <slot name="information"></slot>
                  </div>
                </div>
              </button>
              <div class="mg-c-menu-item__collapse-container" hidden="">
                <slot></slot>
              </div>
            </mock:shadow-root>
            <span slot="label" title="Joker">
              Joker
            </span>
          </mg-menu-item>
          <mg-menu-item data-overflow-proxy-index="2" data-style-direction="vertical" role="listitem" status="visible">
            <mock:shadow-root>
              <button class="mg-c-menu-item__navigation-button mg-c-menu-item__navigation-button--size-regular mg-c-menu-item__navigation-button--visible">
                <slot name="image"></slot>
                <div class="mg-c-menu-item__navigation-button-center">
                  <div class="mg-c-menu-item__navigation-button-text-content">
                    <slot name="label"></slot>
                    <slot name="information"></slot>
                  </div>
                </div>
              </button>
              <div class="mg-c-menu-item__collapse-container" hidden="">
                <slot></slot>
              </div>
            </mock:shadow-root>
            <span slot="label" title="Bane">
              Bane
            </span>
          </mg-menu-item>
        </mg-menu>
      </mg-menu-item>
    </mock:shadow-root>
  </mg-item-more>
</mg-menu>
`;

exports[`mg-item-more render should manage resize with observer, case { size: 'large' } 1`] = `
<mg-menu aria-label="batman" direction="horizontal" role="list">
  <mock:shadow-root>
    <slot></slot>
  </mock:shadow-root>
  <mg-menu-item data-overflow-base-index="0" data-style-direction="horizontal" role="listitem" status="visible">
    <mock:shadow-root>
      <button class="mg-c-menu-item__navigation-button mg-c-menu-item__navigation-button--horizontal mg-c-menu-item__navigation-button--size-large mg-c-menu-item__navigation-button--visible">
        <slot name="image"></slot>
        <div class="mg-c-menu-item__navigation-button-center">
          <div class="mg-c-menu-item__navigation-button-text-content">
            <slot name="label"></slot>
            <slot name="information"></slot>
          </div>
          <slot name="metadata"></slot>
        </div>
      </button>
      <div class="mg-c-menu-item__collapse-container mg-c-menu-item__collapse-container--first-level" hidden="">
        <slot></slot>
      </div>
    </mock:shadow-root>
    <span slot="label" title="Batman">
      Batman
    </span>
  </mg-menu-item>
  <mg-menu-item data-overflow-base-index="1" data-style-direction="horizontal" role="listitem" status="visible">
    <mock:shadow-root>
      <button class="mg-c-menu-item__navigation-button mg-c-menu-item__navigation-button--horizontal mg-c-menu-item__navigation-button--size-large mg-c-menu-item__navigation-button--visible">
        <slot name="image"></slot>
        <div class="mg-c-menu-item__navigation-button-center">
          <div class="mg-c-menu-item__navigation-button-text-content">
            <slot name="label"></slot>
            <slot name="information"></slot>
          </div>
          <slot name="metadata"></slot>
        </div>
      </button>
      <div class="mg-c-menu-item__collapse-container mg-c-menu-item__collapse-container--first-level" hidden="">
        <slot></slot>
      </div>
    </mock:shadow-root>
    <span slot="label" title="Joker">
      Joker
    </span>
  </mg-menu-item>
  <mg-menu-item data-overflow-base-index="2" data-style-direction="horizontal" role="listitem" status="visible">
    <mock:shadow-root>
      <button class="mg-c-menu-item__navigation-button mg-c-menu-item__navigation-button--horizontal mg-c-menu-item__navigation-button--size-large mg-c-menu-item__navigation-button--visible">
        <slot name="image"></slot>
        <div class="mg-c-menu-item__navigation-button-center">
          <div class="mg-c-menu-item__navigation-button-text-content">
            <slot name="label"></slot>
            <slot name="information"></slot>
          </div>
          <slot name="metadata"></slot>
        </div>
      </button>
      <div class="mg-c-menu-item__collapse-container mg-c-menu-item__collapse-container--first-level" hidden="">
        <slot></slot>
      </div>
    </mock:shadow-root>
    <span slot="label" title="Bane">
      Bane
    </span>
  </mg-menu-item>
  <mg-item-more role="listitem">
    <mock:shadow-root>
      <mg-menu-item data-overflow-more data-size="large" data-style-direction="horizontal" role="presentation" status="visible">
        <mock:shadow-root>
          <button aria-expanded="false" class="mg-c-menu-item__navigation-button mg-c-menu-item__navigation-button--size-regular mg-c-menu-item__navigation-button--visible">
            <slot name="image"></slot>
            <div class="mg-c-menu-item__navigation-button-center">
              <div class="mg-c-menu-item__navigation-button-text-content">
                <slot name="label"></slot>
                <slot name="information"></slot>
              </div>
            </div>
            <span class="mg-c-menu-item__navigation-button-chevron">
              <mg-icon icon="chevron-down" size="small"></mg-icon>
            </span>
          </button>
          <div class="mg-c-menu-item__collapse-container" hidden="">
            <slot></slot>
          </div>
        </mock:shadow-root>
        <mg-icon icon="ellipsis-vertical" slot="image"></mg-icon>
        <span class="mg-u-visually-hidden" slot="label" title="Additional menu">
          Additional menu
        </span>
        <mg-menu aria-label="Additional menu" direction="vertical" role="list">
          <mock:shadow-root>
            <slot></slot>
          </mock:shadow-root>
          <mg-menu-item data-overflow-proxy-index="0" data-style-direction="vertical" role="listitem" status="visible">
            <mock:shadow-root>
              <button class="mg-c-menu-item__navigation-button mg-c-menu-item__navigation-button--size-regular mg-c-menu-item__navigation-button--visible">
                <slot name="image"></slot>
                <div class="mg-c-menu-item__navigation-button-center">
                  <div class="mg-c-menu-item__navigation-button-text-content">
                    <slot name="label"></slot>
                    <slot name="information"></slot>
                  </div>
                </div>
              </button>
              <div class="mg-c-menu-item__collapse-container" hidden="">
                <slot></slot>
              </div>
            </mock:shadow-root>
            <span slot="label" title="Batman">
              Batman
            </span>
          </mg-menu-item>
          <mg-menu-item data-overflow-proxy-index="1" data-style-direction="vertical" role="listitem" status="visible">
            <mock:shadow-root>
              <button class="mg-c-menu-item__navigation-button mg-c-menu-item__navigation-button--size-regular mg-c-menu-item__navigation-button--visible">
                <slot name="image"></slot>
                <div class="mg-c-menu-item__navigation-button-center">
                  <div class="mg-c-menu-item__navigation-button-text-content">
                    <slot name="label"></slot>
                    <slot name="information"></slot>
                  </div>
                </div>
              </button>
              <div class="mg-c-menu-item__collapse-container" hidden="">
                <slot></slot>
              </div>
            </mock:shadow-root>
            <span slot="label" title="Joker">
              Joker
            </span>
          </mg-menu-item>
          <mg-menu-item data-overflow-proxy-index="2" data-style-direction="vertical" role="listitem" status="visible">
            <mock:shadow-root>
              <button class="mg-c-menu-item__navigation-button mg-c-menu-item__navigation-button--size-regular mg-c-menu-item__navigation-button--visible">
                <slot name="image"></slot>
                <div class="mg-c-menu-item__navigation-button-center">
                  <div class="mg-c-menu-item__navigation-button-text-content">
                    <slot name="label"></slot>
                    <slot name="information"></slot>
                  </div>
                </div>
              </button>
              <div class="mg-c-menu-item__collapse-container" hidden="">
                <slot></slot>
              </div>
            </mock:shadow-root>
            <span slot="label" title="Bane">
              Bane
            </span>
          </mg-menu-item>
        </mg-menu>
      </mg-menu-item>
    </mock:shadow-root>
  </mg-item-more>
</mg-menu>
`;

exports[`mg-item-more render should manage resize with observer, case { slotlabel: [Object] } 1`] = `
<mg-menu aria-label="batman" direction="horizontal" role="list">
  <mock:shadow-root>
    <slot></slot>
  </mock:shadow-root>
  <mg-menu-item data-overflow-base-index="0" data-style-direction="horizontal" role="listitem" status="visible">
    <mock:shadow-root>
      <button class="mg-c-menu-item__navigation-button mg-c-menu-item__navigation-button--horizontal mg-c-menu-item__navigation-button--size-regular mg-c-menu-item__navigation-button--visible">
        <slot name="image"></slot>
        <div class="mg-c-menu-item__navigation-button-center">
          <div class="mg-c-menu-item__navigation-button-text-content">
            <slot name="label"></slot>
            <slot name="information"></slot>
          </div>
        </div>
      </button>
      <div class="mg-c-menu-item__collapse-container mg-c-menu-item__collapse-container--first-level" hidden="">
        <slot></slot>
      </div>
    </mock:shadow-root>
    <span slot="label" title="Batman">
      Batman
    </span>
  </mg-menu-item>
  <mg-menu-item data-overflow-base-index="1" data-style-direction="horizontal" role="listitem" status="visible">
    <mock:shadow-root>
      <button class="mg-c-menu-item__navigation-button mg-c-menu-item__navigation-button--horizontal mg-c-menu-item__navigation-button--size-regular mg-c-menu-item__navigation-button--visible">
        <slot name="image"></slot>
        <div class="mg-c-menu-item__navigation-button-center">
          <div class="mg-c-menu-item__navigation-button-text-content">
            <slot name="label"></slot>
            <slot name="information"></slot>
          </div>
        </div>
      </button>
      <div class="mg-c-menu-item__collapse-container mg-c-menu-item__collapse-container--first-level" hidden="">
        <slot></slot>
      </div>
    </mock:shadow-root>
    <span slot="label" title="Joker">
      Joker
    </span>
  </mg-menu-item>
  <mg-menu-item data-overflow-base-index="2" data-style-direction="horizontal" role="listitem" status="visible">
    <mock:shadow-root>
      <button class="mg-c-menu-item__navigation-button mg-c-menu-item__navigation-button--horizontal mg-c-menu-item__navigation-button--size-regular mg-c-menu-item__navigation-button--visible">
        <slot name="image"></slot>
        <div class="mg-c-menu-item__navigation-button-center">
          <div class="mg-c-menu-item__navigation-button-text-content">
            <slot name="label"></slot>
            <slot name="information"></slot>
          </div>
        </div>
      </button>
      <div class="mg-c-menu-item__collapse-container mg-c-menu-item__collapse-container--first-level" hidden="">
        <slot></slot>
      </div>
    </mock:shadow-root>
    <span slot="label" title="Bane">
      Bane
    </span>
  </mg-menu-item>
  <mg-item-more role="listitem">
    <mock:shadow-root>
      <mg-menu-item data-overflow-more data-size="regular" data-style-direction="horizontal" role="presentation" status="visible">
        <mock:shadow-root>
          <button aria-expanded="false" class="mg-c-menu-item__navigation-button mg-c-menu-item__navigation-button--size-regular mg-c-menu-item__navigation-button--visible">
            <slot name="image"></slot>
            <div class="mg-c-menu-item__navigation-button-center">
              <div class="mg-c-menu-item__navigation-button-text-content">
                <slot name="label"></slot>
                <slot name="information"></slot>
              </div>
            </div>
            <span class="mg-c-menu-item__navigation-button-chevron">
              <mg-icon icon="chevron-down" size="small"></mg-icon>
            </span>
          </button>
          <div class="mg-c-menu-item__collapse-container" hidden="">
            <slot></slot>
          </div>
        </mock:shadow-root>
        <mg-icon icon="ellipsis-vertical" slot="image"></mg-icon>
        <span class="mg-u-visually-hidden" slot="label" title="Additional menu">
          Additional menu
        </span>
        <mg-menu aria-label="Additional menu" direction="vertical" role="list">
          <mock:shadow-root>
            <slot></slot>
          </mock:shadow-root>
          <mg-menu-item data-overflow-proxy-index="0" data-style-direction="vertical" role="listitem" status="visible">
            <mock:shadow-root>
              <button class="mg-c-menu-item__navigation-button mg-c-menu-item__navigation-button--size-regular mg-c-menu-item__navigation-button--visible">
                <slot name="image"></slot>
                <div class="mg-c-menu-item__navigation-button-center">
                  <div class="mg-c-menu-item__navigation-button-text-content">
                    <slot name="label"></slot>
                    <slot name="information"></slot>
                  </div>
                </div>
              </button>
              <div class="mg-c-menu-item__collapse-container" hidden="">
                <slot></slot>
              </div>
            </mock:shadow-root>
            <span slot="label" title="Batman">
              Batman
            </span>
          </mg-menu-item>
          <mg-menu-item data-overflow-proxy-index="1" data-style-direction="vertical" role="listitem" status="visible">
            <mock:shadow-root>
              <button class="mg-c-menu-item__navigation-button mg-c-menu-item__navigation-button--size-regular mg-c-menu-item__navigation-button--visible">
                <slot name="image"></slot>
                <div class="mg-c-menu-item__navigation-button-center">
                  <div class="mg-c-menu-item__navigation-button-text-content">
                    <slot name="label"></slot>
                    <slot name="information"></slot>
                  </div>
                </div>
              </button>
              <div class="mg-c-menu-item__collapse-container" hidden="">
                <slot></slot>
              </div>
            </mock:shadow-root>
            <span slot="label" title="Joker">
              Joker
            </span>
          </mg-menu-item>
          <mg-menu-item data-overflow-proxy-index="2" data-style-direction="vertical" role="listitem" status="visible">
            <mock:shadow-root>
              <button class="mg-c-menu-item__navigation-button mg-c-menu-item__navigation-button--size-regular mg-c-menu-item__navigation-button--visible">
                <slot name="image"></slot>
                <div class="mg-c-menu-item__navigation-button-center">
                  <div class="mg-c-menu-item__navigation-button-text-content">
                    <slot name="label"></slot>
                    <slot name="information"></slot>
                  </div>
                </div>
              </button>
              <div class="mg-c-menu-item__collapse-container" hidden="">
                <slot></slot>
              </div>
            </mock:shadow-root>
            <span slot="label" title="Bane">
              Bane
            </span>
          </mg-menu-item>
        </mg-menu>
      </mg-menu-item>
    </mock:shadow-root>
  </mg-item-more>
</mg-menu>
`;

exports[`mg-item-more render should manage resize with observer, case undefined 1`] = `
<mg-menu aria-label="batman" direction="horizontal" role="list">
  <mock:shadow-root>
    <slot></slot>
  </mock:shadow-root>
  <mg-menu-item data-overflow-base-index="0" data-style-direction="horizontal" role="listitem" status="visible">
    <mock:shadow-root>
      <button class="mg-c-menu-item__navigation-button mg-c-menu-item__navigation-button--horizontal mg-c-menu-item__navigation-button--size-regular mg-c-menu-item__navigation-button--visible">
        <slot name="image"></slot>
        <div class="mg-c-menu-item__navigation-button-center">
          <div class="mg-c-menu-item__navigation-button-text-content">
            <slot name="label"></slot>
            <slot name="information"></slot>
          </div>
        </div>
      </button>
      <div class="mg-c-menu-item__collapse-container mg-c-menu-item__collapse-container--first-level" hidden="">
        <slot></slot>
      </div>
    </mock:shadow-root>
    <span slot="label" title="Batman">
      Batman
    </span>
  </mg-menu-item>
  <mg-menu-item data-overflow-base-index="1" data-style-direction="horizontal" role="listitem" status="visible">
    <mock:shadow-root>
      <button class="mg-c-menu-item__navigation-button mg-c-menu-item__navigation-button--horizontal mg-c-menu-item__navigation-button--size-regular mg-c-menu-item__navigation-button--visible">
        <slot name="image"></slot>
        <div class="mg-c-menu-item__navigation-button-center">
          <div class="mg-c-menu-item__navigation-button-text-content">
            <slot name="label"></slot>
            <slot name="information"></slot>
          </div>
        </div>
      </button>
      <div class="mg-c-menu-item__collapse-container mg-c-menu-item__collapse-container--first-level" hidden="">
        <slot></slot>
      </div>
    </mock:shadow-root>
    <span slot="label" title="Joker">
      Joker
    </span>
  </mg-menu-item>
  <mg-menu-item data-overflow-base-index="2" data-style-direction="horizontal" role="listitem" status="visible">
    <mock:shadow-root>
      <button class="mg-c-menu-item__navigation-button mg-c-menu-item__navigation-button--horizontal mg-c-menu-item__navigation-button--size-regular mg-c-menu-item__navigation-button--visible">
        <slot name="image"></slot>
        <div class="mg-c-menu-item__navigation-button-center">
          <div class="mg-c-menu-item__navigation-button-text-content">
            <slot name="label"></slot>
            <slot name="information"></slot>
          </div>
        </div>
      </button>
      <div class="mg-c-menu-item__collapse-container mg-c-menu-item__collapse-container--first-level" hidden="">
        <slot></slot>
      </div>
    </mock:shadow-root>
    <span slot="label" title="Bane">
      Bane
    </span>
  </mg-menu-item>
  <mg-item-more role="listitem">
    <mock:shadow-root>
      <mg-menu-item data-overflow-more data-size="regular" data-style-direction="horizontal" role="presentation" status="visible">
        <mock:shadow-root>
          <button aria-expanded="false" class="mg-c-menu-item__navigation-button mg-c-menu-item__navigation-button--size-regular mg-c-menu-item__navigation-button--visible">
            <slot name="image"></slot>
            <div class="mg-c-menu-item__navigation-button-center">
              <div class="mg-c-menu-item__navigation-button-text-content">
                <slot name="label"></slot>
                <slot name="information"></slot>
              </div>
            </div>
            <span class="mg-c-menu-item__navigation-button-chevron">
              <mg-icon icon="chevron-down" size="small"></mg-icon>
            </span>
          </button>
          <div class="mg-c-menu-item__collapse-container" hidden="">
            <slot></slot>
          </div>
        </mock:shadow-root>
        <mg-icon icon="ellipsis-vertical" slot="image"></mg-icon>
        <span class="mg-u-visually-hidden" slot="label" title="Additional menu">
          Additional menu
        </span>
        <mg-menu aria-label="Additional menu" direction="vertical" role="list">
          <mock:shadow-root>
            <slot></slot>
          </mock:shadow-root>
          <mg-menu-item data-overflow-proxy-index="0" data-style-direction="vertical" role="listitem" status="visible">
            <mock:shadow-root>
              <button class="mg-c-menu-item__navigation-button mg-c-menu-item__navigation-button--size-regular mg-c-menu-item__navigation-button--visible">
                <slot name="image"></slot>
                <div class="mg-c-menu-item__navigation-button-center">
                  <div class="mg-c-menu-item__navigation-button-text-content">
                    <slot name="label"></slot>
                    <slot name="information"></slot>
                  </div>
                </div>
              </button>
              <div class="mg-c-menu-item__collapse-container" hidden="">
                <slot></slot>
              </div>
            </mock:shadow-root>
            <span slot="label" title="Batman">
              Batman
            </span>
          </mg-menu-item>
          <mg-menu-item data-overflow-proxy-index="1" data-style-direction="vertical" role="listitem" status="visible">
            <mock:shadow-root>
              <button class="mg-c-menu-item__navigation-button mg-c-menu-item__navigation-button--size-regular mg-c-menu-item__navigation-button--visible">
                <slot name="image"></slot>
                <div class="mg-c-menu-item__navigation-button-center">
                  <div class="mg-c-menu-item__navigation-button-text-content">
                    <slot name="label"></slot>
                    <slot name="information"></slot>
                  </div>
                </div>
              </button>
              <div class="mg-c-menu-item__collapse-container" hidden="">
                <slot></slot>
              </div>
            </mock:shadow-root>
            <span slot="label" title="Joker">
              Joker
            </span>
          </mg-menu-item>
          <mg-menu-item data-overflow-proxy-index="2" data-style-direction="vertical" role="listitem" status="visible">
            <mock:shadow-root>
              <button class="mg-c-menu-item__navigation-button mg-c-menu-item__navigation-button--size-regular mg-c-menu-item__navigation-button--visible">
                <slot name="image"></slot>
                <div class="mg-c-menu-item__navigation-button-center">
                  <div class="mg-c-menu-item__navigation-button-text-content">
                    <slot name="label"></slot>
                    <slot name="information"></slot>
                  </div>
                </div>
              </button>
              <div class="mg-c-menu-item__collapse-container" hidden="">
                <slot></slot>
              </div>
            </mock:shadow-root>
            <span slot="label" title="Bane">
              Bane
            </span>
          </mg-menu-item>
        </mg-menu>
      </mg-menu-item>
    </mock:shadow-root>
  </mg-item-more>
</mg-menu>
`;
